@@ -1,0 +1,1 @@
+MD5 a1b410fb5d622814819f3193a2510535 kiso-0.6.tar.gz 1789826
