@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/kiso
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/kiso/ChangeLog,v 1.5 2004/09/02 12:17:20 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/kiso/ChangeLog,v 1.6 2004/09/19 18:22:06 caleb Exp $
+
+*kiso-0.6 (19 Sep 2004)
+
+  19 Sep 2004; Caleb Tennis <caleb@gentoo.org> +kiso-0.6.ebuild:
+  Version bump
 
   02 Sep 2004; Travis Tilley <lv@gentoo.org> kiso-0.4.2.ebuild:
   stable on amd64
